# nexa

./: README.md  main.py  package-lock.json  pyproject.toml
be/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
be/alembic/: env.py
be/alembic/versions/: 94d674dd2b1c_add_is_fraud_to_withdrawals_drop_risk_.py  9b424d24c8c8_add_evaluations_table_and_evaluation_id_.py  9c1a887c5cf8_add_feedback_loop_tables.py  a1b2c3d4e5f6_add_investigation_data_to_evaluations.py  a1b2c3d4e5f7_add_admins_table.py  b36343356fa7_initial_schema.py  c7f8a9b0d1e2_add_customer_risk_postures.py  d1e2f3a4b5c6_rename_fraud_patterns_add_phase2_tables.py  e2f3a4b5c6d7_add_audit_configs_table.py  f1a2b3c4d5e6_add_background_audit_tables.py
be/app/: config.py  main.py
be/app/agentic_system/: README.md  base_agent.py
be/app/api/: README.md
be/app/core/: README.md  calibration.py  pattern_fingerprint.py  scoring.py  threshold_manager.py  weight_context.py  weight_drift.py
be/app/data/: README.md
be/app/services/: README.md
be/docs/: INDEX.md  MODULES.md  README.md
be/docs/agentic_system/: README.md
be/docs/api/: README.md
be/docs/architecture/: agentic_system.md  analyst_chat_system.md  background_audit_system.md  component_diagram.md  payout_state_machine.md  seeding_scenarios.md  test_data_seeding.md  (+1 more)
be/outputs/: stress_test_20260209_160630.json  stress_test_20260209_160811.json
be/scripts/: README.md  seed_dashboard.py  seed_data.py  seed_patterns.py  seed_posture_enrichments.py  seed_posture_history.py  seed_postures.py
(+573 files in other folders)
